k8s/bluegreen/backend-blue.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-v2
  namespace: wellness-bg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      version: v2
  template:
    metadata:
      labels:
        app: backend
        version: v2
    spec:
      terminationGracePeriodSeconds: 16

      containers:
        - name: backend
          image: ghcr.io/luisrodvilladaorg/wellness-ops-backend:v1.0.4
          ports:
            - containerPort: 3000

          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 5
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
