k8s/bluegreen/backend-bg-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-bg-service
  namespace: wellness-bg
spec:
  selector:
    app: backend
    version: v1
  ports:
    - port: 80
      targetPort: 3000
