k8s/bluegreen/backend-v2-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-v2-service
  namespace: wellness-bg
spec:
  selector:
    app: backend
    version: v2
  ports:
    - port: 80
      targetPort: 3000
