k8s/bluegreen/bg-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wellness-bg-ingress
  namespace: wellness-bg
spec:
  ingressClassName: nginx
  rules:
    - host: wellness.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-bg-service
                port:
                  number: 80
